exports[`ses-domain with custom SPF values 1`] = `
{
  "Resources": {
    "SesDomain0A5DC5B8": {
      "DeletionPolicy": "Delete",
      "Properties": {
        "DomainName": "example.com",
        "IncludeVerificationRecord": "true",
        "Serial": 1,
        "ServiceToken": {
          "Fn::GetAtt": [
            "lifligcdksesdomainproviderProviderframeworkonEventEFBE5AD7",
            "Arn",
          ],
        },
      },
      "Type": "AWS::CloudFormation::CustomResource",
      "UpdateReplacePolicy": "Delete",
    },
    "lifligcdksesdomainproviderFunctionB62280C6": {
      "DependsOn": [
        "lifligcdksesdomainproviderFunctionServiceRoleDefaultPolicy378DC1DA",
        "lifligcdksesdomainproviderFunctionServiceRole4F119253",
      ],
      "Properties": {
        "Code": Any<Object>,
        "Handler": "index.handler",
        "Role": {
          "Fn::GetAtt": [
            "lifligcdksesdomainproviderFunctionServiceRole4F119253",
            "Arn",
          ],
        },
        "Runtime": "nodejs24.x",
        "Timeout": 300,
      },
      "Type": "AWS::Lambda::Function",
    },
    "lifligcdksesdomainproviderFunctionServiceRole4F119253": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": [
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "lifligcdksesdomainproviderFunctionServiceRoleDefaultPolicy378DC1DA": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": [
                "ses:DeleteIdentity",
                "ses:GetIdentityDkimAttributes",
                "ses:GetIdentityMailFromDomainAttributes",
                "ses:GetIdentityVerificationAttributes",
                "ses:SetIdentityDkimEnabled",
                "ses:SetIdentityMailFromDomain",
                "ses:VerifyDomainDkim",
                "ses:VerifyDomainIdentity",
                "ses:PutEmailIdentityConfigurationSetAttributes",
              ],
              "Effect": "Allow",
              "Resource": "*",
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "lifligcdksesdomainproviderFunctionServiceRoleDefaultPolicy378DC1DA",
        "Roles": [
          {
            "Ref": "lifligcdksesdomainproviderFunctionServiceRole4F119253",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "lifligcdksesdomainproviderProviderframeworkonEventEFBE5AD7": {
      "DependsOn": [
        "lifligcdksesdomainproviderProviderframeworkonEventServiceRoleDefaultPolicy389AABE6",
        "lifligcdksesdomainproviderProviderframeworkonEventServiceRole23759D5D",
      ],
      "Properties": {
        "Code": Any<Object>,
        "Description": "AWS CDK resource provider framework - onEvent (Stack/liflig-cdk.ses-domain.provider/Provider)",
        "Environment": {
          "Variables": {
            "USER_ON_EVENT_FUNCTION_ARN": {
              "Fn::GetAtt": [
                "lifligcdksesdomainproviderFunctionB62280C6",
                "Arn",
              ],
            },
          },
        },
        "Handler": "framework.onEvent",
        "LoggingConfig": {
          "ApplicationLogLevel": "FATAL",
          "LogFormat": "JSON",
        },
        "Role": {
          "Fn::GetAtt": [
            "lifligcdksesdomainproviderProviderframeworkonEventServiceRole23759D5D",
            "Arn",
          ],
        },
        "Runtime": "nodejs24.x",
        "Timeout": 900,
      },
      "Type": "AWS::Lambda::Function",
    },
    "lifligcdksesdomainproviderProviderframeworkonEventServiceRole23759D5D": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": [
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "lifligcdksesdomainproviderProviderframeworkonEventServiceRoleDefaultPolicy389AABE6": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": "lambda:InvokeFunction",
              "Effect": "Allow",
              "Resource": [
                {
                  "Fn::GetAtt": [
                    "lifligcdksesdomainproviderFunctionB62280C6",
                    "Arn",
                  ],
                },
                {
                  "Fn::Join": [
                    "",
                    [
                      {
                        "Fn::GetAtt": [
                          "lifligcdksesdomainproviderFunctionB62280C6",
                          "Arn",
                        ],
                      },
                      ":*",
                    ],
                  ],
                },
              ],
            },
            {
              "Action": "lambda:GetFunction",
              "Effect": "Allow",
              "Resource": {
                "Fn::GetAtt": [
                  "lifligcdksesdomainproviderFunctionB62280C6",
                  "Arn",
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "lifligcdksesdomainproviderProviderframeworkonEventServiceRoleDefaultPolicy389AABE6",
        "Roles": [
          {
            "Ref": "lifligcdksesdomainproviderProviderframeworkonEventServiceRole23759D5D",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
  },
}
`;

exports[`ses-domain with default configuration set 1`] = `
{
  "Resources": {
    "SesDomain0A5DC5B8": {
      "DeletionPolicy": "Delete",
      "Properties": {
        "DefaultConfigurationSetName": "exampleconfigset",
        "DomainName": "example.com",
        "IncludeVerificationRecord": "true",
        "Serial": 1,
        "ServiceToken": {
          "Fn::GetAtt": [
            "lifligcdksesdomainproviderProviderframeworkonEventEFBE5AD7",
            "Arn",
          ],
        },
      },
      "Type": "AWS::CloudFormation::CustomResource",
      "UpdateReplacePolicy": "Delete",
    },
    "lifligcdksesdomainproviderFunctionB62280C6": {
      "DependsOn": [
        "lifligcdksesdomainproviderFunctionServiceRoleDefaultPolicy378DC1DA",
        "lifligcdksesdomainproviderFunctionServiceRole4F119253",
      ],
      "Properties": {
        "Code": Any<Object>,
        "Handler": "index.handler",
        "Role": {
          "Fn::GetAtt": [
            "lifligcdksesdomainproviderFunctionServiceRole4F119253",
            "Arn",
          ],
        },
        "Runtime": "nodejs24.x",
        "Timeout": 300,
      },
      "Type": "AWS::Lambda::Function",
    },
    "lifligcdksesdomainproviderFunctionServiceRole4F119253": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": [
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "lifligcdksesdomainproviderFunctionServiceRoleDefaultPolicy378DC1DA": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": [
                "ses:DeleteIdentity",
                "ses:GetIdentityDkimAttributes",
                "ses:GetIdentityMailFromDomainAttributes",
                "ses:GetIdentityVerificationAttributes",
                "ses:SetIdentityDkimEnabled",
                "ses:SetIdentityMailFromDomain",
                "ses:VerifyDomainDkim",
                "ses:VerifyDomainIdentity",
                "ses:PutEmailIdentityConfigurationSetAttributes",
              ],
              "Effect": "Allow",
              "Resource": "*",
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "lifligcdksesdomainproviderFunctionServiceRoleDefaultPolicy378DC1DA",
        "Roles": [
          {
            "Ref": "lifligcdksesdomainproviderFunctionServiceRole4F119253",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "lifligcdksesdomainproviderProviderframeworkonEventEFBE5AD7": {
      "DependsOn": [
        "lifligcdksesdomainproviderProviderframeworkonEventServiceRoleDefaultPolicy389AABE6",
        "lifligcdksesdomainproviderProviderframeworkonEventServiceRole23759D5D",
      ],
      "Properties": {
        "Code": Any<Object>,
        "Description": "AWS CDK resource provider framework - onEvent (Stack/liflig-cdk.ses-domain.provider/Provider)",
        "Environment": {
          "Variables": {
            "USER_ON_EVENT_FUNCTION_ARN": {
              "Fn::GetAtt": [
                "lifligcdksesdomainproviderFunctionB62280C6",
                "Arn",
              ],
            },
          },
        },
        "Handler": "framework.onEvent",
        "LoggingConfig": {
          "ApplicationLogLevel": "FATAL",
          "LogFormat": "JSON",
        },
        "Role": {
          "Fn::GetAtt": [
            "lifligcdksesdomainproviderProviderframeworkonEventServiceRole23759D5D",
            "Arn",
          ],
        },
        "Runtime": "nodejs24.x",
        "Timeout": 900,
      },
      "Type": "AWS::Lambda::Function",
    },
    "lifligcdksesdomainproviderProviderframeworkonEventServiceRole23759D5D": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": [
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "lifligcdksesdomainproviderProviderframeworkonEventServiceRoleDefaultPolicy389AABE6": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": "lambda:InvokeFunction",
              "Effect": "Allow",
              "Resource": [
                {
                  "Fn::GetAtt": [
                    "lifligcdksesdomainproviderFunctionB62280C6",
                    "Arn",
                  ],
                },
                {
                  "Fn::Join": [
                    "",
                    [
                      {
                        "Fn::GetAtt": [
                          "lifligcdksesdomainproviderFunctionB62280C6",
                          "Arn",
                        ],
                      },
                      ":*",
                    ],
                  ],
                },
              ],
            },
            {
              "Action": "lambda:GetFunction",
              "Effect": "Allow",
              "Resource": {
                "Fn::GetAtt": [
                  "lifligcdksesdomainproviderFunctionB62280C6",
                  "Arn",
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "lifligcdksesdomainproviderProviderframeworkonEventServiceRoleDefaultPolicy389AABE6",
        "Roles": [
          {
            "Ref": "lifligcdksesdomainproviderProviderframeworkonEventServiceRole23759D5D",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
  },
}
`;

exports[`ses-domain with hosted zone 1`] = `
{
  "Resources": {
    "SesDomain0A5DC5B8": {
      "DeletionPolicy": "Delete",
      "Properties": {
        "DomainName": "example.com",
        "IncludeVerificationRecord": "true",
        "Serial": 1,
        "ServiceToken": {
          "Fn::GetAtt": [
            "lifligcdksesdomainproviderProviderframeworkonEventEFBE5AD7",
            "Arn",
          ],
        },
      },
      "Type": "AWS::CloudFormation::CustomResource",
      "UpdateReplacePolicy": "Delete",
    },
    "SesDomainRecordSetGroupF83CCA2C": {
      "Properties": {
        "HostedZoneId": "ABCDEF12345678",
        "RecordSets": {
          "Fn::GetAtt": [
            "SesDomain0A5DC5B8",
            "Route53RecordSets",
          ],
        },
      },
      "Type": "AWS::Route53::RecordSetGroup",
    },
    "SesDomainStaticRecordSetGroup5A3938AB": {
      "Properties": {
        "HostedZoneId": "ABCDEF12345678",
        "RecordSets": [
          {
            "Name": "example.com",
            "ResourceRecords": [
              ""v=spf1 include:amazonses.com ~all"",
            ],
            "TTL": "60",
            "Type": "TXT",
          },
        ],
      },
      "Type": "AWS::Route53::RecordSetGroup",
    },
    "lifligcdksesdomainproviderFunctionB62280C6": {
      "DependsOn": [
        "lifligcdksesdomainproviderFunctionServiceRoleDefaultPolicy378DC1DA",
        "lifligcdksesdomainproviderFunctionServiceRole4F119253",
      ],
      "Properties": {
        "Code": Any<Object>,
        "Handler": "index.handler",
        "Role": {
          "Fn::GetAtt": [
            "lifligcdksesdomainproviderFunctionServiceRole4F119253",
            "Arn",
          ],
        },
        "Runtime": "nodejs24.x",
        "Timeout": 300,
      },
      "Type": "AWS::Lambda::Function",
    },
    "lifligcdksesdomainproviderFunctionServiceRole4F119253": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": [
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "lifligcdksesdomainproviderFunctionServiceRoleDefaultPolicy378DC1DA": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": [
                "ses:DeleteIdentity",
                "ses:GetIdentityDkimAttributes",
                "ses:GetIdentityMailFromDomainAttributes",
                "ses:GetIdentityVerificationAttributes",
                "ses:SetIdentityDkimEnabled",
                "ses:SetIdentityMailFromDomain",
                "ses:VerifyDomainDkim",
                "ses:VerifyDomainIdentity",
                "ses:PutEmailIdentityConfigurationSetAttributes",
              ],
              "Effect": "Allow",
              "Resource": "*",
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "lifligcdksesdomainproviderFunctionServiceRoleDefaultPolicy378DC1DA",
        "Roles": [
          {
            "Ref": "lifligcdksesdomainproviderFunctionServiceRole4F119253",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "lifligcdksesdomainproviderProviderframeworkonEventEFBE5AD7": {
      "DependsOn": [
        "lifligcdksesdomainproviderProviderframeworkonEventServiceRoleDefaultPolicy389AABE6",
        "lifligcdksesdomainproviderProviderframeworkonEventServiceRole23759D5D",
      ],
      "Properties": {
        "Code": Any<Object>,
        "Description": "AWS CDK resource provider framework - onEvent (Stack/liflig-cdk.ses-domain.provider/Provider)",
        "Environment": {
          "Variables": {
            "USER_ON_EVENT_FUNCTION_ARN": {
              "Fn::GetAtt": [
                "lifligcdksesdomainproviderFunctionB62280C6",
                "Arn",
              ],
            },
          },
        },
        "Handler": "framework.onEvent",
        "LoggingConfig": {
          "ApplicationLogLevel": "FATAL",
          "LogFormat": "JSON",
        },
        "Role": {
          "Fn::GetAtt": [
            "lifligcdksesdomainproviderProviderframeworkonEventServiceRole23759D5D",
            "Arn",
          ],
        },
        "Runtime": "nodejs24.x",
        "Timeout": 900,
      },
      "Type": "AWS::Lambda::Function",
    },
    "lifligcdksesdomainproviderProviderframeworkonEventServiceRole23759D5D": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": [
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "lifligcdksesdomainproviderProviderframeworkonEventServiceRoleDefaultPolicy389AABE6": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": "lambda:InvokeFunction",
              "Effect": "Allow",
              "Resource": [
                {
                  "Fn::GetAtt": [
                    "lifligcdksesdomainproviderFunctionB62280C6",
                    "Arn",
                  ],
                },
                {
                  "Fn::Join": [
                    "",
                    [
                      {
                        "Fn::GetAtt": [
                          "lifligcdksesdomainproviderFunctionB62280C6",
                          "Arn",
                        ],
                      },
                      ":*",
                    ],
                  ],
                },
              ],
            },
            {
              "Action": "lambda:GetFunction",
              "Effect": "Allow",
              "Resource": {
                "Fn::GetAtt": [
                  "lifligcdksesdomainproviderFunctionB62280C6",
                  "Arn",
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "lifligcdksesdomainproviderProviderframeworkonEventServiceRoleDefaultPolicy389AABE6",
        "Roles": [
          {
            "Ref": "lifligcdksesdomainproviderProviderframeworkonEventServiceRole23759D5D",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
  },
}
`;

exports[`ses-domain without hosted zone 1`] = `
{
  "Resources": {
    "SesDomain0A5DC5B8": {
      "DeletionPolicy": "Delete",
      "Properties": {
        "DomainName": "example.com",
        "IncludeVerificationRecord": "true",
        "Serial": 1,
        "ServiceToken": {
          "Fn::GetAtt": [
            "lifligcdksesdomainproviderProviderframeworkonEventEFBE5AD7",
            "Arn",
          ],
        },
      },
      "Type": "AWS::CloudFormation::CustomResource",
      "UpdateReplacePolicy": "Delete",
    },
    "lifligcdksesdomainproviderFunctionB62280C6": {
      "DependsOn": [
        "lifligcdksesdomainproviderFunctionServiceRoleDefaultPolicy378DC1DA",
        "lifligcdksesdomainproviderFunctionServiceRole4F119253",
      ],
      "Properties": {
        "Code": Any<Object>,
        "Handler": "index.handler",
        "Role": {
          "Fn::GetAtt": [
            "lifligcdksesdomainproviderFunctionServiceRole4F119253",
            "Arn",
          ],
        },
        "Runtime": "nodejs24.x",
        "Timeout": 300,
      },
      "Type": "AWS::Lambda::Function",
    },
    "lifligcdksesdomainproviderFunctionServiceRole4F119253": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": [
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "lifligcdksesdomainproviderFunctionServiceRoleDefaultPolicy378DC1DA": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": [
                "ses:DeleteIdentity",
                "ses:GetIdentityDkimAttributes",
                "ses:GetIdentityMailFromDomainAttributes",
                "ses:GetIdentityVerificationAttributes",
                "ses:SetIdentityDkimEnabled",
                "ses:SetIdentityMailFromDomain",
                "ses:VerifyDomainDkim",
                "ses:VerifyDomainIdentity",
                "ses:PutEmailIdentityConfigurationSetAttributes",
              ],
              "Effect": "Allow",
              "Resource": "*",
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "lifligcdksesdomainproviderFunctionServiceRoleDefaultPolicy378DC1DA",
        "Roles": [
          {
            "Ref": "lifligcdksesdomainproviderFunctionServiceRole4F119253",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "lifligcdksesdomainproviderProviderframeworkonEventEFBE5AD7": {
      "DependsOn": [
        "lifligcdksesdomainproviderProviderframeworkonEventServiceRoleDefaultPolicy389AABE6",
        "lifligcdksesdomainproviderProviderframeworkonEventServiceRole23759D5D",
      ],
      "Properties": {
        "Code": Any<Object>,
        "Description": "AWS CDK resource provider framework - onEvent (Stack/liflig-cdk.ses-domain.provider/Provider)",
        "Environment": {
          "Variables": {
            "USER_ON_EVENT_FUNCTION_ARN": {
              "Fn::GetAtt": [
                "lifligcdksesdomainproviderFunctionB62280C6",
                "Arn",
              ],
            },
          },
        },
        "Handler": "framework.onEvent",
        "LoggingConfig": {
          "ApplicationLogLevel": "FATAL",
          "LogFormat": "JSON",
        },
        "Role": {
          "Fn::GetAtt": [
            "lifligcdksesdomainproviderProviderframeworkonEventServiceRole23759D5D",
            "Arn",
          ],
        },
        "Runtime": "nodejs24.x",
        "Timeout": 900,
      },
      "Type": "AWS::Lambda::Function",
    },
    "lifligcdksesdomainproviderProviderframeworkonEventServiceRole23759D5D": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": [
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "lifligcdksesdomainproviderProviderframeworkonEventServiceRoleDefaultPolicy389AABE6": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": "lambda:InvokeFunction",
              "Effect": "Allow",
              "Resource": [
                {
                  "Fn::GetAtt": [
                    "lifligcdksesdomainproviderFunctionB62280C6",
                    "Arn",
                  ],
                },
                {
                  "Fn::Join": [
                    "",
                    [
                      {
                        "Fn::GetAtt": [
                          "lifligcdksesdomainproviderFunctionB62280C6",
                          "Arn",
                        ],
                      },
                      ":*",
                    ],
                  ],
                },
              ],
            },
            {
              "Action": "lambda:GetFunction",
              "Effect": "Allow",
              "Resource": {
                "Fn::GetAtt": [
                  "lifligcdksesdomainproviderFunctionB62280C6",
                  "Arn",
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "lifligcdksesdomainproviderProviderframeworkonEventServiceRoleDefaultPolicy389AABE6",
        "Roles": [
          {
            "Ref": "lifligcdksesdomainproviderProviderframeworkonEventServiceRole23759D5D",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
  },
}
`;
